@@ -1,6 +1,6 @@
 # Author: Ramon Casero <rcasero@gmail.com>
 # Copyright © 2011 University of Oxford
-# Version: 0.6.0
+# Version: 0.6.1
 # $Rev$
 # $Date$
 #
@@ -28,6 +28,10 @@
 # along with this program.  If not, see
 # <http://www.gnu.org/licenses/>.
 
+# add Boost include and linking paths
+include_directories(${Boost_INCLUDE_DIRS})
+link_directories(${Boost_LIBRARY_DIRS})
+
 ################################################################
 ## itk_imfilter()
 ################################################################
@@ -44,6 +48,7 @@ INCLUDE_DIRECTORIES(
   ${GERARDUS_SOURCE_DIR}/cpp/src/third-party/itkBinaryThinningImageFilter3D/Source
   )
 TARGET_LINK_LIBRARIES(itk_imfilter
+  CGAL
   ${ITK_LIBRARIES})
 
 # add dependency to compiler_config.h, a header file generated by CGAL
